# llamaedge-query-server

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: error.rs  main.rs
src/backend/: mod.rs  requests.rs
src/search/: bing_search.rs  local_google_search.rs  mod.rs  tavily_search.rs
