[package]
name = "llamaedge-query-server"
version = "0.0.1"
edition = "2021"

[dependencies]
wasmedge-wasi-nn = "0.8.0"
clap = { version = "4.4.6", features = ["cargo"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#llama-core = "0.13.1"
#endpoints = "0.11.0"
#chat-prompts = "0.10.2"
endpoints = { git = "https://github.com/suryyyansh/LlamaEdge.git", branch = "dev"}
llama-core = { git = "https://github.com/suryyyansh/LlamaEdge.git", branch = "dev", features = ["full", "search"]}
chat-prompts = { git = "https://github.com/suryyyansh/LlamaEdge.git", branch = "dev"}
either = "1.13.0"
tokio_wasi = { version = "1.25.2", features = ["full"] }
hyper_wasi = { version = "0.15.2", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
log = { version = "0.4.22", features = ["kv", "kv_serde", "std"] }
thiserror = "1.0.63"
